# zmq_experiment

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/cpp/: CMakeLists.txt
src/cpp/include/: AudioPacket.hpp  message.hpp  publisher.hpp  subscriber.hpp
src/cpp/protobuf/: zmq_experiment.pb-c.c  zmq_experiment.pb-c.h  zmq_experiment.pb.cc  zmq_experiment.pb.h
src/cpp/src/: AudioPacket.cpp  main.cpp  publisher.cpp  subscriber.cpp
src/protobuf/: Makefile  zmq_experiment.proto
src/zmq_experiment/: __main__.py  audio_packet.py  message.py
src/zmq_experiment/protobuf/: zmq_experiment_pb2.py  zmq_experiment_pb2.pyi
src/zmq_experiment/pub/: __main__.py  publisher.py
src/zmq_experiment/sub/: __main__.py  subscriber.py
tests/: test_message_serialization.py
