[project]
name = "zmq-experiment"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Calnan",email = "pwc3@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "zmq (>=0.0.0,<0.0.1)",
    "numpy (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "zmq_experiment", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
